--- a/ORM/ORM.csproj
+++ b/ORM/ORM.csproj
@@ -36,11 +36,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Security">
-      <HintPath>..\..\..\VisualStudio\Common7\IDE\Mono.Security.dll</HintPath>
+      <HintPath>..\lib\Mono.Security.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data, Version=6.9.10.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="Npgsql">
-      <HintPath>..\..\..\VisualStudio\Common7\IDE\Npgsql.dll</HintPath>
+      <HintPath>..\lib\Npgsql.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
